--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "xpdf-4.03"]
 	path = xpdf-4.03
-	url = git@github.com:npospelov/xpdf-4.03.git
+	url = https://github.com/npospelov/xpdf-4.03.git
